Bug 131819 - Table incorrectly specified as 100% relative size
Summary: Table incorrectly specified as 100% relative size
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: László Németh
URL:
Whiteboard: target:7.0.0
Keywords:
Depends on:
Blocks: DOCX-Tables
  Show dependency treegraph
 
Reported: 2020-04-02 09:43 UTC by Justin L
Modified: 2020-05-02 20:41 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
NumberedList.docx: from ooxmlexport5 (54.22 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2020-04-02 09:43 UTC, Justin L
Details
Comparison MSO 2010 and LibreOffice 7.0 master ( with borders ) (19.75 KB, image/png)
2020-04-02 11:31 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Justin L 2020-04-02 09:43:01 UTC
Created attachment 159261 [details]
NumberedList.docx: from ooxmlexport5

This document opens with the table-in-table filling the entire width of the outer table.  It should not be set to relative width size.

This started in LO 7.0 master from commit b71cace906bdce1d1b02b11a2d469e93622fd3af
Author: László Németh  Date:   Mon Jan 6 19:56:03 2020 +0100
    tdf#77796 DOCX: import table style based cell padding
Comment 1 Xisco Faulí 2020-04-02 11:31:44 UTC
Created attachment 159266 [details]
Comparison MSO 2010 and LibreOffice 7.0 master ( with borders )
Comment 2 Xisco Faulí 2020-04-02 11:32:28 UTC
Reproduced in

Version: 7.0.0.0.alpha0+
Build ID: 169a10f0e4680814145b668c6320be04038d7a89
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded
Comment 3 László Németh 2020-04-06 07:54:54 UTC
It seems, this is not a regression. The inner table was imported with a relative width before the bibisected commit, which fixed the bad inner margins here, too. Only the bad import became more visible.
Comment 4 László Németh 2020-04-07 12:25:11 UTC
tdf#131819 DOCX import: fix fixed size nested table

Auto width nested table with fixed width cells
is imported as fixed width table to keep the
original cell widths, which define the width of
the table, too.

Partial revert of commit bed818c5d5e92a0b189f25e18495fc205d949128
(tdf#104876 writerfilter: m_bTableSizeTypeInserted = false here).
Comment 5 Commit Notification 2020-04-07 12:26:02 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f1c7aa5267a8045892890954df3c269a3abaab99

tdf#131819 DOCX import: fix fixed size nested table

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 László Németh 2020-04-07 12:28:06 UTC
Note: I started to fix the other problem with that document, the missing import of table-style based tblInd:

https://gerrit.libreoffice.org/c/core/+/91765
Comment 7 BogdanB 2020-05-02 20:41:52 UTC
Verified on
Version: 7.0.0.0.alpha0+
Build ID: 05b87ae66ebccd06995cf530b860443ad9503b31
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: gtk3; 
Locale: ro-RO (ro_RO.UTF-8); UI-Language: en-US
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2020-05-02_10:14:58
Calc: threaded