tdf#131819 DOCX import: fix fixed size nested table

Auto width nested table with fixed width cells
is imported as fixed width table to keep the
original cell widths, which define the width of
the table, too.

Partial revert of commit bed818c5d5e92a0b189f25e18495fc205d949128
(tdf#104876 writerfilter: m_bTableSizeTypeInserted = false here).

Change-Id: If58c58a792853e1084ff1d8f9bf6ef74a593b1bd
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/91764
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>